<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="10dp"
    tools:context=".ui.ContactFormActivity">


    <TextView
        android:id="@+id/addtextview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Addtv"
        android:gravity="center"
        android:fontFamily="sans-serif-medium"
        android:layout_marginBottom="20dp"
        />

    <EditText
        android:id="@+id/name"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="@string/name"
        android:importantForAutofill="no"
        android:inputType="text"

        />
    <EditText
        android:id="@+id/phone"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:hint="@string/phone"
        android:importantForAutofill="no"
        android:inputType="phone"

        />

    <Button
        android:id="@+id/btnsubmit"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/submit"
        android:backgroundTint="@color/Dark_green"
        android:textColor="@color/baige"
        />




</LinearLayout>